Revert to Java 11 for Heroku container (missing changes)